<resources>
    <string name="app_name">Pick Cart</string>
    <string name="slogan">Enjoy your trip</string>

    <string name="driver">Driver</string>
    <string name="customer">Customer</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="trips">Trips</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="info">About us</string>
    <string name="communicate">Communicate</string>
    <string name="trip_details">Trip Details</string>

    <string name="email_validation">Please Enter email address</string>
    <string name="password_validation">Please Enter password</string>
    <string name="network_validation">Please check your internet</string>
    <string name="permission_validation">Please provide us the permissions</string>
    <string name="sign_in_error">Wrong mail or password</string>
    <string name="register_error">Please try another email</string>
    <string name="call_horse">Get a horse..</string>
    <string name="one_horse">One</string>
    <string name="tow_horse">2 - 3</string>
    <string name="group_horse">Group</string>

    <string name="getting_yours">Getting your horse..</string>
    <string name="looking_for_location">Looking for Horse Location....</string>
    <string name="arrived">Horse Arrived</string>
    <string name="trip_completed">Trip Completed</string>
    <string name="pick_customer">Pick a customer</string>
    <string name="working">Working</string>

    <string name="driver_ad">http://www.72advertising.com/uploads/5/1/6/3/5163697/4394512_orig.jpg</string>
    <string name="customer_ad">https://designcontest-com-designcontest.netdna-ssl.com/blog/wp-content/uploads/2015/07/banner-ad-fail-11.jpg</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
