<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"

    tools:context="com.simcoder.uber.ui.CustomerSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ads_image_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profile_image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_default_user"
                app:riv_oval="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/divider"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:met_baseColor="@color/primaryText"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/primaryText"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/divider"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:met_baseColor="@color/primaryText"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/primaryText"
                app:met_singleLineEllipsis="true" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_background_customer"
                android:text="@string/confirm"
                android:textColor="@color/icons" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_background_primary"
                android:text="@string/cancel"
                android:textColor="@color/icons" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ads_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/company_logo" />

</RelativeLayout>
